--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "latest",
